--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -1,19 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 input {
-  outline: none;
-}
+  outline: none; }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 body {
   font-family: "Lato", sans-serif;
   background-color: #f9f9f9;
-  height: 150vh;
-}
+  height: 150vh; }
 
 .navbar {
   display: flex;
@@ -23,290 +20,238 @@ body {
   align-items: center;
   z-index: 1;
   padding: 0.5rem 0;
-  background-color: #fff;
-}
-.navbar .navbar-logo {
-  display: flex;
-  align-items: center;
-  margin: 0 1rem;
-  cursor: pointer;
-  text-decoration: none;
-}
-.navbar .navbar-logo .navbar-logo-icon {
-  margin-right: 1rem;
-}
-.navbar .navbar-logo .navbar-logo-text {
-  color: #5f6368;
-}
-.navbar .navbar-links {
-  display: flex;
-  margin-right: 2rem;
-}
-.navbar .navbar-links li {
-  display: inline;
-  padding: 1rem;
-}
-.navbar .navbar-links li a {
-  font-size: 1rem;
-  text-decoration: none;
-  color: #5f6368;
-  padding: 0.5rem 1rem;
-}
-.navbar .navbar-links li a:hover {
-  border-bottom: #00bcd4 2px solid;
-}
-.navbar .navbar-links li .shopping-cart {
-  height: 1.25rem;
-  font-weight: 700;
-}
+  background-color: #fff; }
+  .navbar .navbar-logo {
+    display: flex;
+    align-items: center;
+    margin: 0 1rem;
+    cursor: pointer;
+    text-decoration: none; }
+    .navbar .navbar-logo .navbar-logo-icon {
+      margin-right: 1rem; }
+    .navbar .navbar-logo .navbar-logo-text {
+      color: #5f6368; }
+  .navbar .navbar-links {
+    display: flex;
+    margin-right: 2rem; }
+    .navbar .navbar-links li {
+      display: inline;
+      padding: 1rem; }
+      .navbar .navbar-links li a {
+        font-size: 1rem;
+        text-decoration: none;
+        color: #5f6368;
+        padding: 0.5rem 1rem; }
+        .navbar .navbar-links li a:hover {
+          border-bottom: #00bcd4 2px solid; }
+      .navbar .navbar-links li .shopping-cart {
+        height: 1.25rem;
+        font-weight: 700; }
 
 .toflex {
   display: flex;
-  flex-direction: row;
-}
-.toflex .menu-bar {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 30%;
-  position: sticky;
-  top: 4.5rem;
-  left: 0;
-  padding-top: 0.5rem;
-  background-color: #00bcd4;
-  overflow-x: hidden;
-}
-.toflex .menu-bar a {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 7px 8px 7px 16px;
-  text-decoration: none;
-}
-.toflex .menu-bar a .menu-bar-content-item-icon {
-  margin: 2px 16px;
-  color: #fff;
-}
-.toflex .menu-bar a .menu-bar-content-item-text {
-  font-size: 25px;
-  text-align: center;
-  color: #fff;
-  display: block;
-  padding-left: 2rem;
-}
-.toflex .menu-bar a:hover {
-  padding: 7px 0px;
-  margin: 0rem 1rem;
-  background-color: #fff;
-  border-radius: 1rem;
-}
-.toflex .menu-bar a:hover .menu-bar-content-item-text,
-.toflex .menu-bar a:hover .menu-bar-content-item-icon {
-  color: #00bcd4;
-}
-.toflex .page-content {
-  display: flex;
-  flex-direction: column;
-  margin: 4.45rem 0rem 2rem 0rem;
-  position: relative;
-  left: 12%;
-}
-.toflex .page-content .page-content-item {
-  font-family: Lato;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.toflex .page-content .page-content-item .page-content-main-text {
-  display: flex;
-  height: 50px;
-  font-weight: 800;
-  font-size: 48px;
-  text-align: center;
-  color: #00bcd4;
-  padding: 0rem 9rem;
-  margin: 1rem 0rem;
-}
-.toflex .page-content .page-content-item .form-label {
-  font-size: 147%;
-  display: flex;
-  align-items: center;
-  color: #a19e9b;
-  padding: 1rem;
-}
-.toflex .page-content .page-content-item input {
-  padding: 0.5rem;
-  width: 90%;
-  font-weight: 300;
-  color: #888;
-  font-size: 1rem;
-}
-.toflex .page-content .page-content-item .drop-shadow {
-  display: flex;
-  height: 3rem;
-  padding: 0.4rem 2rem;
-  background: #ffffff;
-  box-shadow: 4px 4px 10px 1px rgba(0, 0, 0, 0.25);
-  border-radius: 21px;
-  border: 0px;
-}
-.toflex .page-content .page-content-item .submit-btn {
-  display: flex;
-  position: relative;
-  top: 2rem;
-  left: 70%;
-  margin-bottom: 2rem;
-  padding: 0.4rem 0.6rem;
-  cursor: pointer;
-  border-radius: 10px;
-  width: 20%;
-  box-shadow: none;
-  border: #00bcd4 1px solid;
-  font-size: 15px;
-}
-.toflex .page-content .page-content-item .submit-btn:hover {
-  background-color: #00bcd4;
-  color: #fff;
-}
-.toflex .page-content .page-content-item .profile {
-  display: flex;
-  flex-direction: row;
-  margin-top: 25px;
-  /* Modal Content (image) */
-  /* Caption of Modal Image */
-}
-.toflex .page-content .page-content-item .profile .profile-photo {
-  cursor: pointer;
-  border-radius: 50%;
-  mix-blend-mode: multiply;
-  width: 5rem;
-  height: 5rem;
-}
-.toflex .page-content .page-content-item .profile a {
-  text-decoration: none;
-}
-.toflex .page-content .page-content-item .profile #myImg:hover {
-  opacity: 0.9;
-}
-.toflex .page-content .page-content-item .profile .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: rgba(0, 0, 0, 0.9);
-}
-.toflex .page-content .page-content-item .profile .modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-.toflex .page-content .page-content-item .profile #caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #00bcd4;
-  padding: 10px 0;
-  height: 150px;
-  font-size: 35px;
-}
-.toflex .page-content .page-content-item .profile .close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-}
-.toflex .page-content .page-content-item .profile .close:hover,
-.toflex .page-content .page-content-item .profile .close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
+  flex-direction: row; }
+  .toflex .menu-bar {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 30%;
+    position: sticky;
+    top: 4.5rem;
+    left: 0;
+    padding-top: 0.5rem;
+    background-color: #00bcd4;
+    overflow-x: hidden; }
+    .toflex .menu-bar a {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 7px 8px 7px 16px;
+      text-decoration: none; }
+      .toflex .menu-bar a .menu-bar-content-item-icon {
+        margin: 2px 16px;
+        color: #fff; }
+      .toflex .menu-bar a .menu-bar-content-item-text {
+        font-size: 25px;
+        text-align: center;
+        color: #fff;
+        display: block;
+        padding-left: 2rem; }
+      .toflex .menu-bar a:hover {
+        padding: 7px 0px;
+        margin: 0rem 1rem;
+        background-color: #fff;
+        border-radius: 1rem; }
+        .toflex .menu-bar a:hover .menu-bar-content-item-text,
+        .toflex .menu-bar a:hover .menu-bar-content-item-icon {
+          color: #00bcd4; }
+  .toflex .page-content {
+    display: flex;
+    flex-direction: column;
+    margin: 4.45rem 0rem 2rem 0rem;
+    position: relative;
+    left: 12%; }
+    .toflex .page-content .page-content-item {
+      font-family: Lato;
+      display: flex;
+      flex-direction: column;
+      width: 100%; }
+      .toflex .page-content .page-content-item .page-content-main-text {
+        display: flex;
+        height: 50px;
+        font-weight: 800;
+        font-size: 48px;
+        text-align: center;
+        color: #00bcd4;
+        padding: 0rem 9rem;
+        margin: 1rem 0rem; }
+      .toflex .page-content .page-content-item .form-label {
+        font-size: 147%;
+        display: flex;
+        align-items: center;
+        color: #a19e9b;
+        padding: 1rem; }
+      .toflex .page-content .page-content-item input {
+        padding: 0.5rem;
+        width: 90%;
+        font-weight: 300;
+        color: #888;
+        font-size: 1rem; }
+      .toflex .page-content .page-content-item .drop-shadow {
+        display: flex;
+        height: 3rem;
+        padding: 0.4rem 2rem;
+        background: #ffffff;
+        box-shadow: 4px 4px 10px 1px rgba(0, 0, 0, 0.25);
+        border-radius: 21px;
+        border: 0px; }
+      .toflex .page-content .page-content-item .submit-btn {
+        display: flex;
+        position: relative;
+        top: 2rem;
+        left: 70%;
+        margin-bottom: 2rem;
+        padding: 0.4rem 0.6rem;
+        cursor: pointer;
+        border-radius: 10px;
+        width: 20%;
+        box-shadow: none;
+        border: #00bcd4 1px solid;
+        font-size: 15px; }
+        .toflex .page-content .page-content-item .submit-btn:hover {
+          background-color: #00bcd4;
+          color: #fff; }
+      .toflex .page-content .page-content-item .profile {
+        display: flex;
+        flex-direction: row;
+        margin-top: 25px;
+        /* Modal Content (image) */
+        /* Caption of Modal Image */ }
+        .toflex .page-content .page-content-item .profile .profile-photo {
+          cursor: pointer;
+          border-radius: 50%;
+          mix-blend-mode: multiply;
+          width: 5rem;
+          height: 5rem; }
+        .toflex .page-content .page-content-item .profile a {
+          text-decoration: none; }
+        .toflex .page-content .page-content-item .profile #myImg:hover {
+          opacity: 0.9; }
+        .toflex .page-content .page-content-item .profile .modal {
+          display: none;
+          position: fixed;
+          z-index: 1;
+          padding-top: 100px;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          /* Enable scroll if needed */
+          background-color: rgba(0, 0, 0, 0.9); }
+        .toflex .page-content .page-content-item .profile .modal-content {
+          margin: auto;
+          display: block;
+          width: 80%;
+          max-width: 700px; }
+        .toflex .page-content .page-content-item .profile #caption {
+          margin: auto;
+          display: block;
+          width: 80%;
+          max-width: 700px;
+          text-align: center;
+          color: #00bcd4;
+          padding: 10px 0;
+          height: 150px;
+          font-size: 35px; }
+        .toflex .page-content .page-content-item .profile .close {
+          position: absolute;
+          top: 15px;
+          right: 35px;
+          color: #f1f1f1;
+          font-size: 40px;
+          font-weight: bold; }
+        .toflex .page-content .page-content-item .profile .close:hover,
+        .toflex .page-content .page-content-item .profile .close:focus {
+          color: #bbb;
+          text-decoration: none;
+          cursor: pointer; }
 
 .footer {
-  color: #fff;
-}
-.footer .footer-main {
-  padding: 0 0 4rem 0;
-  background-color: #3c444c;
-  display: flex;
-  justify-content: space-between;
-}
-.footer .footer-main .footer-header {
-  width: 25%;
-  margin: 2rem 0 0 5rem;
-}
-.footer .footer-main .footer-header .footer-logo {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-.footer .footer-main .footer-header .footer-logo .footer-logo-icon {
-  margin-right: 1rem;
-}
-.footer .footer-main .footer-header .footer-logo .footer-logo-text {
-  color: white;
-}
-.footer .footer-main .footer-header .footer-logo-ptext {
-  margin-top: 1.25rem;
-  width: 80%;
-}
-.footer .footer-main .footer-links {
-  display: flex;
-  width: 70%;
-  margin-top: 2rem;
-  justify-content: space-evenly;
-}
-.footer .footer-main .footer-links .footer-link .footer-link-header {
-  font-weight: 400;
-  margin-bottom: 0.5rem;
-}
-.footer .footer-main .footer-links .footer-link ul {
-  list-style: none;
-}
-.footer .footer-main .footer-links .footer-link ul li {
-  padding: 0.25rem 0;
-}
-.footer .footer-main .footer-links .footer-link ul li a {
-  text-decoration: none;
-  color: #ffffffbb;
-  display: flex;
-}
-.footer .footer-main .footer-links .footer-link ul li a img {
-  padding-right: 0.5rem;
-}
-.footer .footer-main .footer-links .footer-link ul li a:hover {
-  color: #fff;
-}
-.footer .footer-secondary {
-  background-color: #5f6368;
-  display: flex;
-  justify-content: space-between;
-  padding: 1.5rem 3rem;
-}
-.footer .footer-secondary h4 {
-  font-size: 1rem;
-  font-weight: 400;
-}
-.footer .footer-secondary ul li {
-  display: inline;
-  list-style: none;
-  padding: 0 1rem;
-}
-.footer .footer-secondary ul li a {
-  text-decoration: none;
-  color: #ffffffbb;
-}
-.footer .footer-secondary ul li a:hover {
-  color: #fff;
-}
+  color: #fff; }
+  .footer .footer-main {
+    padding: 0 0 4rem 0;
+    background-color: #3c444c;
+    display: flex;
+    justify-content: space-between; }
+    .footer .footer-main .footer-header {
+      width: 25%;
+      margin: 2rem 0 0 5rem; }
+      .footer .footer-main .footer-header .footer-logo {
+        display: flex;
+        align-items: center;
+        cursor: pointer; }
+        .footer .footer-main .footer-header .footer-logo .footer-logo-icon {
+          margin-right: 1rem; }
+        .footer .footer-main .footer-header .footer-logo .footer-logo-text {
+          color: white; }
+      .footer .footer-main .footer-header .footer-logo-ptext {
+        margin-top: 1.25rem;
+        width: 80%; }
+    .footer .footer-main .footer-links {
+      display: flex;
+      width: 70%;
+      margin-top: 2rem;
+      justify-content: space-evenly; }
+      .footer .footer-main .footer-links .footer-link .footer-link-header {
+        font-weight: 400;
+        margin-bottom: 0.5rem; }
+      .footer .footer-main .footer-links .footer-link ul {
+        list-style: none; }
+        .footer .footer-main .footer-links .footer-link ul li {
+          padding: 0.25rem 0; }
+          .footer .footer-main .footer-links .footer-link ul li a {
+            text-decoration: none;
+            color: #ffffffbb;
+            display: flex; }
+            .footer .footer-main .footer-links .footer-link ul li a img {
+              padding-right: 0.5rem; }
+            .footer .footer-main .footer-links .footer-link ul li a:hover {
+              color: #fff; }
+  .footer .footer-secondary {
+    background-color: #5f6368;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 3rem; }
+    .footer .footer-secondary h4 {
+      font-size: 1rem;
+      font-weight: 400; }
+    .footer .footer-secondary ul li {
+      display: inline;
+      list-style: none;
+      padding: 0 1rem; }
+      .footer .footer-secondary ul li a {
+        text-decoration: none;
+        color: #ffffffbb; }
+        .footer .footer-secondary ul li a:hover {
+          color: #fff; }
