--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -5,14 +5,12 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     //- link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css")
     link(rel="icon", href="/favicon.png", type="image/x-icon")
-    link(rel="icon", href="http://localhost:3000/favicon.png", type="image/x-icon")
-    link(rel='stylesheet',type='text/css', href='/src/css/style.css')
-    link(rel="stylesheet", href="/css/auth.css")
-    link(rel="stylesheet", href="/css/main.css")
+    link(rel="stylesheet", href="/src/css/main.css")
     - titlecontent = title ? `CakeOp | ${title}`: 'CakeOp'
     title= titlecontent
 
   body
-    include header.pug 
-    block body
-    script(src="src/js/style.js")
+    include _header.pug 
+    block body 
+    script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
+    script(src="/src/js/style.js")
